cleanup recentCommunity subcommunity bugfix

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@tailwindcss/vite": "^4.1.16",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
-    "dataloader": "^2.2.3",
     "dayjs": "^1.11.18",
+    "idb-keyval": "^6.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
